# forensicsim

./: .TRAVIS.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CITATION.cff  Forensicsim_Parser.py  LICENSE.md  README.md  build.bat  main.spec  mypy.ini  new_out.json  pyproject.toml  requirements.txt  ruff.toml  test.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: build.yaml  codeql.yml  release.yaml
export/: parsed.json
populationdata/: README.md  batch1.json  batch2.json  batch3.json  batch4.json  batch5.json  batch6.json  batch7.json  batch8.json  batch9.json
src/forensicsim/: backend.py  consts.py  parser.py
test/: comparison.py  current.json  target.json
testdata/IndexedDB/https_teams.microsoft.com_0.indexeddb.leveldb/: 000114.ldb  000118.ldb  CURRENT  LOG.old
testdata/Jane Doe/IndexedDB/https_teams.microsoft.com_0.indexeddb.leveldb/: 000115.ldb  000116.ldb  LOG  MANIFEST-000120
testdata/John Doe/IndexedDB/https_teams.microsoft.com_0.indexeddb.leveldb/: 000115.ldb  000116.ldb  LOG  LOG.old  MANIFEST-000001
testdata/John Doe/IndexedDB/https_teams.microsoft.com_0.indexeddb.leveldb/carved/: 000072.ldb  000073.ldb  000075.ldb  000077.ldb  000078.ldb
tools/: Forensicsim_Parser.py  dump_leveldb.py  dump_localstorage.py  dump_sessionstorage.py  main.py  populate_skype.py  populate_teams.py  populate_teams_2.py
utils/: .gitignore  consts.py  dump_leveldb.py  dump_localstorage.py  dump_sessionstorage.py  main.py  populate_skype.py  populate_teams.py  populate_teams_2.py  scout_leveldb.py  search_record.py  shared.py  test.py
utils/ccl_chrome_indexeddb/: Chromium_dump_local_storage.py  Chromium_dump_session_storage.py  LICENSE  ccl_blink_value_deserializer.py  ccl_chromium_indexeddb.py  ccl_chromium_localstorage.py  ccl_chromium_sessionstorage.py  ccl_leveldb.py  ccl_simplesnappy.py  ccl_v8_value_deserializer.py  dump_indexeddb_details.py  dump_leveldb.py
utils/examples/: messagetypes.md
